# WinAPI_Tracker

./: .gitignore  README.md  injector.py  script.js
Process_Monitor/: CMakeLists.txt  config.ini
Process_Monitor/include/: config.hpp  etw_monitor.hpp  injector.hpp  krabs.hpp  utils.hpp
Process_Monitor/src/: config.cpp  etw_monitor.cpp  injector.cpp  utils.cpp
WinAPI_Injector/: injector.spec
WinAPI_Injector/src/: config.ini  config_loader.py  frida_controller.py  main.py  output_logger.py
